///////////////////////////////////////////////////////////////////////////////////////////////////
/// @file   CustomProductAudioService.h
/// @brief   This file contains source code for Eddie specific behavior for
///         communicating with APProduct Server and APProduct related FrontDoor interaction
/// Copyright 2017 Bose Corporation
////////////////////////////////////////////////////////////////////////////////////////////////////

#pragma once
#include "ProductAudioService.h"
#include "EddieProductController.h"

namespace ProductApp
{

constexpr char kBassEndPoint[] = "/audio/bass";
constexpr char kTrebleEndPoint[] = "/audio/treble";

class CustomProductAudioService: public ProductAudioService
{
public:
    bool Run();
    CustomProductAudioService( EddieProductController& ProductController,
                               const FrontDoorClientIF_t& FrontDoorClient );

private:
    //////////////////////////////////////////////////////////////////////////////////////////////
    /// Front Door handlers
    /////////////////////////////////////////////////////////////////////////////////////////////
    std::unique_ptr<AudioSetting<ProductPb::AudioBassLevel>>        m_AudioBassSetting;
    std::unique_ptr<AudioSetting<ProductPb::AudioTrebleLevel>>      m_AudioTrebleSetting;

    /////////////////////////////////////////////////////////////////////////////////////////////////
    /// APProduct handling functions
    /////////////////////////////////////////////////////////////////////////////////////////////////
    void RegisterAudioPathEvents() override;

    ////////////////////////////////////////////////////////////////////////////////////////////////////
    /// FrontDoor callback functions
    ////////////////////////////////////////////////////////////////////////////////////////////////////
    void RegisterFrontDoorEvents() override;
};
}// namespace ProductApp
